# tentacle-Jobs

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
tentacle_apply/: __init__.py  api.py  cli.py  config.py  log.py  orchestrator.py  structured.py  tracker.py
tentacle_apply/apply/: __init__.py  _common.py  answers.py  ashby.py  assets.py  base.py  greenhouse.py  lever.py  registry.py  smartrecruiters.py  workable.py  workday.py
tentacle_apply/db/: __init__.py  models.py  session.py
tentacle_apply/discovery/: __init__.py  detect.py  filters.py  preferences.py  registry.py  seed_companies.py  service.py
tentacle_apply/intake/: __init__.py  extract_text.py  profile.py
tentacle_apply/llm/: __init__.py  provider.py
tentacle_apply/matching/: __init__.py  embedder.py  matcher.py
tentacle_apply/sources/: __init__.py  adzuna.py  arbeitnow.py  ashby.py  base.py  greenhouse.py  lever.py  remotive.py  smartrecruiters.py  workable.py  workday.py
tentacle_apply/tailor/: __init__.py  critic.py  render.py  studio.py  writer.py
tentacle_apply/web_static/: index.html
tests/: test_answers.py  test_apply_base.py  test_apply_registry.py  test_confirmation.py  test_critic_and_render.py  test_detect.py  test_discovery_filters.py  test_greenhouse_classify.py  test_intake_coerce.py  test_matching.py  test_orchestrator.py  test_preferences.py  test_registry_resolve.py  test_schema_reconcile.py  test_sources_base.py  test_structured.py  test_tailor_studio.py
